--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "body-parser": "^1.12.4",
     "coffee-script": "^1.9.2",
-    "express": "^4.12.4"
+    "express": "^4.12.4",
+    "request": "~2.55.0"
   }
 }
