--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "body-parser": "^1.12.4",
     "coffee-script": "^1.9.2",
     "express": "^4.12.4",
+    "q": "^1.4.1",
     "request": "~2.55.0"
+  },
+  "devDependencies": {
+    "mocha": "~2.2.5",
+    "nock": "~2.2.0",
+    "supertest": "^1.0.1"
   }
 }
