--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.12.4",
     "coffee-script": "^1.9.2",
     "express": "^4.12.4",
+    "hyperweb": "0.0.0",
     "q": "^1.4.1",
     "request": "~2.55.0"
   },
